--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -69,7 +69,7 @@
   in der Webentwicklung stellte er mit dem Blog eine wichtige Schnittstelle zur Außenwelt her.
 
   \textbf{Lucas Ullrich}\\
-  \textbf{Sensorik & Firmware}\\
+  \textbf{Sensorik \& Firmware}\\
   Lucas Ullrich war neben seiner Position als Projektleiter Stellvertreter für die Sensorik an unserer Drohne und
   für die Programmierung der Firmware zuständig. Er unterstützte unseren Projektleiter bei terminlichen Angelegenheiten
   und konnte durch seine Kenntnisse mit der Programmiersprache C eine solide Basis für die Firmware des Microcontrollers schaffen.
@@ -88,7 +88,7 @@
   die die Kommunikation zwischen der Speisekarte und der Drohne regelte.
 
   \textbf{Alexander Punz}\\
-  \textbf{Hardware & Mechanik}\\
+  \textbf{Hardware \& Mechanik}\\
   Alexander Punz war sowohl für die Hardware als auch für die Mechanik verantwortlich. Seine Aufgaben waren sowohl die Konzeption
   und Produktion des Rotorschutzes, der einen sicheren Flug der Drohne ermöglichte, als auch die Herstellung diverser Halterungen,
   die für Sensorik, Transport und Flugtests verausgesetzt waren.
