fehlende Inhalte eingefügt

--- a/Digitale_Speisekarte.tex
+++ b/Digitale_Speisekarte.tex
@@ -8,6 +8,8 @@
   \subsection{Entwicklungsumgebungen}
 
     \subsubsection{PhpStorm}
+    
+    PhpStorm ist eine integrierte Entwicklungsumgebung für die Programmiersprache PHP, für welche man eine kostenpflichtige Lizenz zur Verwendung benötigt. Diese Entwicklungsumgebung wurde von JetBrains entwickelt und erschien erstmals 2009 auf dem Markt. Zu den besonderen Features von PhpStorm zählen Tools zur Kontrolle der Versionierung, Refaktorisierung, Code- und Syntax-Highlighting. Außerdem unterstützt es PHP-Unit, welches von Symfony verwendet wird und zum Testen von PHP-Skripten dient. 
 
     \subsubsection{Allgemeiner Code-Aufbau}
 
@@ -57,7 +59,7 @@
 	(Code)
 	Der Befehl „lts“ legt fest, dass die neueste Version von Symfony verwendet wird.
 
-    \subsubsection{Seitenabrufbarkeit bewerkstelligen}
+    \subsubsection{Seitenabrufbarkeit}
 
 	Um Seiten anzulegen, welche später im Browser angezeigt werden konnten, musste man im Controller folgende Schritte erledigen. Zuerst empfahl es sich Action Funktionen anzulegen. Diese wurden passend zu der jeweiligen Seite beziehungsweise zu den dementsprechenden Funktionalitäten benannt, welche im Anschluss angezeigt und ausgeführt wurden. Wenn auf der auszugebenden Seite mit einer Template Engine gearbeitet wurde, wurde als Rückgabewert der Methode der anschließende Code definiert:
 	(Code)
