Symphony in Symfony ausgebessert

--- a/Marketing.tex
+++ b/Marketing.tex
@@ -107,7 +107,7 @@ behandelt.
 
     \begin{itemize}
       \item Laravel
-      \item Symphony
+      \item Symfony
       \item CodeIgniter
       \item CakePHP
     \end{itemize}
