--- a/Marketing.tex
+++ b/Marketing.tex
@@ -1,3 +1,4 @@
+% !TEX root = diplomarbeit.tex
 \chapter{Marketing}
 \renewcommand{\kapitelautor}{Autor: Markus Kaiser}
 
@@ -11,10 +12,10 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
   \textbf{SWOT-Analyse}\\
   Mithilfe der SWOT-Analyse wird der aktuelle Zustand eines Unternehmens, oder in unserem Fall Projektes, analysiert um anschließend eine von vier möglichen Strategien
   für den weiteren Verlauf des Unternehmens zu erarbeiten. Es werden Stärken, Schwächen, Möglichkeiten und Risiken evaluiert, wobei sich jeweils Stärken \& Schwächen, und
-  Möglichkeiten \& Risiken gegenüberstehen. Die vier Begriffe auf englisch übersetzt Strengths, Weaknesses, Opportunities und Risks ergeben dadurch das Akronym SWOT.\\
-  \\
+  Möglichkeiten \& Risiken gegenüberstehen. Die vier Begriffe auf englisch übersetzt Strengths, Weaknesses, Opportunities und Risks ergeben dadurch das Akronym SWOT.
+
   \textcolor{red}{(BILD Analyse)}\\
-  \\
+
   \textbf{Die vier Strategien:}\\
   \begin{itemize}
     \item \textbf{SO-Strategie}\\
@@ -32,19 +33,18 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \item \textbf{WT-Strategie}\\
     Die Schwächen des Unternehmens werden näher betrachtet, um beim Versuch diese zu dezimieren, gleichzeitig Riskiken einzugrenzen. Diese Strategie kann sehr hilfreich
     sein, wenn das Unternehmen sich auf dem Markt schwer über Wasser halten kann.
-  \end{itemize}\\
-  \\
+  \end{itemize}
   \textbf{SWOT-Analyse von Hovering Steward}\\
-  ...\\
-  \\
+  ...
+
   \textbf{Portfolioanalyse nach Boston Consulting Group}\\
   Die Definition laut {"Boston Consulting Group"\cite{portfolioanalyse}} beschreibt die Portfolioanalyse wie folgt:
   "Das BCG-Portfolio erlaubt eine Bewertung strategisch relevanter Geschäftseinheiten auf Basis zukünftiger Gewinnchancen (Marktwachstum) und der
   gegenwärtigen Wettbewerbsposition (relativer Marktanteil)." Anders gesagt: Diese Analyse hilft dabei Teile eines Unternehmens wie Produkte oder Dienstleistungen
-  nach Kosten und Ertrag einzuschätzen und in vier Kategorien zu unterteilen.\\
-  \\
-  \textcolor{red}{(BILD BCG-Matrix)}\\
-  \\
+  nach Kosten und Ertrag einzuschätzen und in vier Kategorien zu unterteilen.
+
+  \textcolor{red}{(BILD BCG-Matrix)}
+
   \begin{itemize}
     \item Die \textbf{Cashcow} ist ein Produkt des Unternehmens, welches sich bereits lange Zeit auf dem Markt hält und dadurch hohe Gewinne erziehlt. Durch die
     erarbeitete hohe Position auf dem Markt decken sich ihre Kosten durch den Gewinn selbst. Die Cashcow stellt zudem die Basis für die Weiterentwicklung anderer
@@ -82,23 +82,23 @@ behandelt.
 
     \subsubsection{Mockups}
     Die Überlegungen bezüglich des Designs des Blogs unterschieden sich stark zwischen den ersten
-    Entwürfen und der schlussendlich gewählten Variante.\\
-    \\
+    Entwürfen und der schlussendlich gewählten Variante.
+
     Die Wahl der Farben basierte ursprünglich auf einer Studie der deutschen Schriftstellerin Eva Heller,
     die mit ihrem Buch {"Wie Farben wirken"\cite{WieFarbenWirken}} analysierte, welche Farbtöne von einem Großteil der Menschen
     mit welcher Eigenschaft verbunden werden. Der Fokus von Hovering Steward lag darin, die zwei Begriffe "Hunger"
     und "Appetit" möglichst gut zu vermitteln. Das Resultat war eine Kombination der Farben Braun, Gelb und Rosa
     assoziiert wurden. Den Blog mithilfe dieser Farbkombination zu gestalten erschien jedoch nicht passend, weswegen
-    ein zweiter Ansatz notwendig war.\\
-    \\
+    ein zweiter Ansatz notwendig war.
+
     Die Überlegung den Blog gleich wie die digitale Speisekarte zu gestalten führte dazu, Elemente, die an ein Restaurant
     erinnern einzubinden. Dies führte zu der Idee, einen Holztisch im Hintergrund abzubilden.
     Damit das Design trotzdem einen modernen Eindruck macht wurde für die Darstellung von Inhalten ein {"Flat Design"\cite{FlatDesign}}
     herangezogen. Das Flat Design zeichnet sich vor allem durch sehr vereinfache Gestaltung, grelle Farben und zweidimensionale Abbildungen aus.
-    Es ist auf optimale Usability, also verständliche und einfache Nutzung ausgelegt.\\
-    \\
-    Das Endresultat war folgendes:\\
-    \textcolor{red}{(BILD VOM BLOG)}\\
+    Es ist auf optimale Usability, also verständliche und einfache Nutzung ausgelegt.
+
+    Das Endresultat war folgendes:
+    \textcolor{red}{(BILD VOM BLOG)}
 
     \subsubsection{Frameworks}
     Für die Entwicklung des Blogs erschien der Einsatz eines Frameworks als sehr hilfreich. Das Framework sollte komplexe Methoden wie
@@ -111,7 +111,7 @@ behandelt.
       \item CodeIgniter
       \item CakePHP
     \end{itemize}
-    \\
+
     Die Wahl fiel letztlich auf CodeIgniter ...
 
   \subsection{Umsetzung}
@@ -119,130 +119,133 @@ behandelt.
     \subsubsection{Frontend}
     Das Frontend des Blogs setzt sich aus den drei Technologien HTML, JavaScript und CSS zusammen. Aus Gründen von Performance und SEO wurden außerdem
     die JavaScript Bibliothek jQuery und das CSS Framework Bootstrap verwendet. Im Folgenden werden diese Technologien näher beschrieben und die daraus
-    ersichtlichen Vorteile, die zu Verwendung in diesem Projekt geführt haben, erläutert.\\
-    \\
+    ersichtlichen Vorteile, die zu Verwendung in diesem Projekt geführt haben, erläutert.
+
     \textbf{HTML}\\
     {Die Hyper Text Markup Language\cite{html}} ist die gängigste Sprache um die Struktur einer Website zu definieren. Sie ist Plattformunabhängig, was bedeutet,
     dass sie unabhängig vom Betriebsystem eines Geräts interpretiert werden kann. Die Syntax von HTML besteht aus sogenannten Tags, die, nach einem
     bestimmten Schema aufgebaut, die Struktur einer Website ergeben. Die aktuellste Version ist HTML 5. Diese unterstützt zum Einen das responsive
-    Entwickeln einer Website, und verbessert zum Anderen die SEO. Außerdem ist es möglich ohne der Verwendung von Adobe Flash Player Audio und Video einzubinden.\\
-    \\
+    Entwickeln einer Website, und verbessert zum Anderen die SEO. Außerdem ist es möglich ohne der Verwendung von Adobe Flash Player Audio und Video einzubinden.
+
     \textbf{JavaScript}\\
     {JavaScript\cite{javascript}} ist eine webbasierende Programmiersprache. Sie ist objektorientiert, was bedeutet, dass eigene Funktionen und Klassen geschrieben, und wiederverwendet
     werden können. Die Sprache wird genutzt um Vorgänge wie Berechnungen oder Animationen auf einer Website im Hintergrund durchzuführen. Oft sind diese mit Interaktion
     des Nutzers verbunden. JavaScript greift hierfür auf das Document Object Model des HTML-Dokumtens zu, um Elemente und Knoten in diesem hinzuzufügen, zu löschen, oder
     zu ändern. Ein großer Vorteil von JavaScript ist, dass durch das Einbinden von, auf JavaScript basierenden Bibliotheken ganz leicht eine Vielzahl von zusätzlichen Funktionen
-    verwendet werden können.\\
-    \\
+    verwendet werden können.
+
     Ein gutes Beispiel, und zugleich auch eine, für den Blog verwendete Bibliothek ist {jQuery\cite{jquery}}.
     jQuery ist eine Open-Source Bibliothek, mit dessen Entwicklung versucht wurde, die Nachteile von JavaScript zu beheben. Einer der wesentlichsten Vorteile ist
-    der vereinfachte Zugriff und die Manipulation auf DOM-Elemente.\\
-    \\
-    Beispiel JavaScript:\\
-    \textcolor{red}{(CODE JS)}\\
-    \\
-    Beispiel: jQuery:\\
-    \textcolor{red}{(CODE jQUery)}\\
-    \\
-    \textbf{CSS}\\
+    der vereinfachte Zugriff und die Manipulation auf DOM-Elemente.
+
+    Beispiel JavaScript:
+
+    \textcolor{red}{(CODE JS)}
+
+    Beispiel: jQuery:
+
+    \textcolor{red}{(CODE jQUery)}
+
+    \textbf{CSS}
     {CSS\cite{css}} steht für Cascading Style Sheets. Wie die Bezeichnung durch das Wort Style schon sagt wird sie für das visuelle Aufbereiten einer Website verwendet.
     Allgemein ist CSS eine Auszeichnungssprache für Dokumente mit strukturierten Inhalten wie HTML. In HTML werden dafür den DOM-Elementen Klassen oder IDs
     zugewiesen, über die CSS dann beliegige Eigenschaften zuweisen kann. Dabei orientiert sich CSS nach dem sogenannten Box-Modell. In diesem werden HTML-Elemente
     zwischen Inline-Elementen und Block-Elemente unterschieden. Inline-Elemente passen sich dem Fluss in der Struktur des Dokuments an, Block-Elemente hingegen
     werden für das Layout der Website verwendet. Von einfachen Formatierungen wie der Schriftgröße oder einer Hintergrundfarbe lassen sich mit CSS komlexe Animationen,
-    ohne die Verwendung von JavaScript durchführen. Letzteres ist jedoch erst seit der Version CSS3 möglich.\\
-    \\
+    ohne die Verwendung von JavaScript durchführen. Letzteres ist jedoch erst seit der Version CSS3 möglich.
+
     Das Open-Source Framework {Twitter Bootstrap\cite{bootstrap}} gilt eigentlich als CSS-Framework, da den Elementen die Eigenschaften über CSS Klassen zugewiesen werden, es basiert jedoch
     ebenfalls auf HTML und JavaScript. Neben dem wesentlichen Vorteil der responsiven Gestaltung einer Website mit der Verwendung von Bootstrap, bietet es durch
     zahlreiche, vordefinierte JavaScript Methoden die Möglichkeiten animierte Dropdown-Menüs, Pop-Up-Windows oder Bildergalerien einzubinden.
-    Weitere wichtige Eigenschaften von Bootstrap sind die hohe Browserkompatibilität und das einheitliche Design.\\
-    \\
+    Weitere wichtige Eigenschaften von Bootstrap sind die hohe Browserkompatibilität und das einheitliche Design.
+
     \subsubsection{Backend}
     Das Backend setzt sich ausschließlich aus dem Framework CodeIgniter zusammen, welches auf der Serverseitigen Scriptsprache PHP basiert. Für die Datenspeicherung
-    wurde eine MySQL-Datenbank verwendet.\\
-    \\
+    wurde eine MySQL-Datenbank verwendet.
+
     \textbf{Code}\\
-    \\
+
     \textbf{PHP}\\
     {PHP\cite{php} ist genau wie JavaScript eine Open-Source Scriptsprache, mit dem großen Unterschied, dass der Code nicht auf dem Client, sondern auf dem Server ausgeführt wird,
     und im Anschluss für den Client lesbares HTML generiert. Dies bietet den großen Vorteil, dass für den Client nicht ersichtlich ist, was im Hintergrund an PHP Code ausgeführt
-    wird. Um PHP zu programmieren wird allerdings ein Webserver mit einer PHP-Installation benötigt.\\
-    \\
+    wird. Um PHP zu programmieren wird allerdings ein Webserver mit einer PHP-Installation benötigt.
+
     \textbf{Ruby}\\
     {Ruby\cite{ruby}} ist eine gängie Alternative zu PHP. Neben syntaktischen Vorteilen gegnüber PHP stellt Ruby eine ScriptSprache für einen allgemeineren Gebrauch,
     also andere Anwendungsgebiete als die Webentwicklung dar. Das auf Ruby basierende Framework "Ruby on Rails" ist ein beliebtes Werkzeg für den Bereich der Webentwicklung.
     Da Ruby jedoch noch keinen so hohen Bekanntheitsgrad wie PHP hat, gibt es weniger ausführlichere Dokumentationen, weswegen PHP als die sinnvollere Variante erschien.
-    Außerdem ist die Überlegung von PHP auf Ruby umzusteigen damit verbunden, einen geeigneten Webhoster zu finden, welcher über eine Ruby Installation auf dem Server verfügt.\\
-    \\
+    Außerdem ist die Überlegung von PHP auf Ruby umzusteigen damit verbunden, einen geeigneten Webhoster zu finden, welcher über eine Ruby Installation auf dem Server verfügt.
+
     \textbf{Perl}\\
     {Perl\cite{perl}} ist ähnlich wie Ruby eine Scriptsprache für vielseitige Nutzung wie Systemadministration, Netzwerkprogrammierung, aber auch Webentwicklung, was sie
     zu einer weiteren Alternative zu PHP macht. Neben dem Vorteil der Plattformunabhängigkeit ist Perl mit den Sprachen HTML und MySQL kompatibel. Beide dieser Sprachen stellen
     einen wichtigen Bestandteil des Blogs dar. Da Perl jedoch im Vergleich zu PHP nicht ausschließlich für die Entwicklung von Webanwendungen vorgesehen ist, sind
-    Methodenaufrufe oft viel komplexer, was einen höheren Aufwand bei der Programmierung bedeutet.\\
-    \\
+    Methodenaufrufe oft viel komplexer, was einen höheren Aufwand bei der Programmierung bedeutet.
+
     \textbf{Datenbank}\\
+
     \textbf{MySQL}\\
     MySQL ist ein weit verbreitetes relationales Datenbanksystem, das auf SQL basiert. SQL steht für "Structured Query Language" und bezeichnet eine Abfragesprache für Datenbanken.
     Sie wird verwendet um Daten in eine Datenbank hinzuzufügen, diese zu ändern oder zu löschen. MySQL stellt eine wichtige Schnittstelle zwischen zwei gängigen Sprachen für
     die Enticklung dynamischer Websites zu Verfügung indem sie es ermöglicht, diese Abfragen mit der Scriptsprache PHP durchzuführen. Ein hilfreiches Verwaltungstool ist phpMyAdmin,
-    eine in PHP entwickelte Anwendung, die die Verwaltung der MySQL Datenbank über eine grafische Oberfläche vereinfacht.\\
-    \\
+    eine in PHP entwickelte Anwendung, die die Verwaltung der MySQL Datenbank über eine grafische Oberfläche vereinfacht.
+
     \textbf{MongoDB}\\
     Anders als MySQL ist {MongoDB\cite{mongodb}} eine NoSQL Datenbank. Der Unterschied liegt darin, dass die Datenbank nicht relational ist. Statt einem konkreten Schema von Tabellen
     wird hier mit sogenannten Dokumenten und Sammlungen gearbeitet. Ein Dokument speichert Daten, nach dem "Key-Value" Prinzip, eine Sammlung enthält mehrere Dokumente.
     Den wesentlichsten Vorteil weist MongoDB in der dynamischen Gestaltung der Datenbank auf. Die Strukturen in Sammlungen können demnach unterschiedlich sein. Die
-    Datenübermittlung erfolgt über {BSON\cite{bson}}, ein JSON ähnliches Format, welches im Vergleich zu diesem jedoch auch Datentypen unterstützt.\\
-    \\
+    Datenübermittlung erfolgt über {BSON\cite{bson}}, ein JSON ähnliches Format, welches im Vergleich zu diesem jedoch auch Datentypen unterstützt.
+
     \subsubsection{SEO}
     Der Blog war unsere wichtigste Schnittstelle nach Außen, weswegen er im Internet leicht zu finden sein musste. Suchmaschinen wie Google oder Bing nutzen
     sogenannte Robots, kleine Programme die selbstständig das World Wide Web durchstöbern, um Websiten zu inspizieren und zu bewerten. Je besser die Bewertung,
-    desto weiter oben lässt sich die Website in der Suchmaschine auffinden.\\
-    Die Bewertung hängt von einer Vielzahl von Kriterien ab, von denen folgende bei der entwicklung des Blogs beachtet wurden:\\
-    \\
+    desto weiter oben lässt sich die Website in der Suchmaschine auffinden.
+    Die Bewertung hängt von einer Vielzahl von Kriterien ab, von denen folgende bei der entwicklung des Blogs beachtet wurden:
+
     \begin{itemize}
       \item \textbf{Aufbau der Seite}\\
-        Die Grundstruktur eines HTML Dokuments besteht aus folgenden Tags:\\
-        \\
-        \textcolor{red}{(BILD HTML BASIC STRUCTURE)}\\
-        \\
+        Die Grundstruktur eines HTML Dokuments besteht aus folgenden Tags:
+
+        \textcolor{red}{(BILD HTML BASIC STRUCTURE)}
+
         Im <head> Bereich werden zum einen <meta> Tags angegeben, in denen allgemeine Informationen zur Website, wie Autor oder Keywords und Beschreibung gespeichert werden.
         Letztere zwei sind besonders wichtig, da sie dem Robot mitteilen, um was es auf der Seite geht. Der Robot achtet hierbei auch darauf, dass die Beschreibung nicht
-        länger als 155 Zeichen lang ist und die Keywords eindeutig gewählt werden.\\
-        \\
+        länger als 155 Zeichen lang ist und die Keywords eindeutig gewählt werden.
+
         Im <body>, also im eigentlichen Inhalt der Website legt der Robot zum einen sehr viel Wert Struktur. Beispielsweise muss die Verschachtelung der Tags stimmen, oder der <h1> Tag darf nur einmal pro Seite
-        vorkommen. Zum anderen werden Inhalt und Code in Relation gesetzt. Wenn der Aufbau des HTML Dokuments riesig ist, in jedem Absatz jedoch nur ein Satz steht kennt sich der Robot nicht aus.\\
-        \\
+        vorkommen. Zum anderen werden Inhalt und Code in Relation gesetzt. Wenn der Aufbau des HTML Dokuments riesig ist, in jedem Absatz jedoch nur ein Satz steht kennt sich der Robot nicht aus.
+
       \item \textbf{Responsive Design}\\
         Das Smartphone ist mittlerweile ein ebenso beliebtes Gerät zum Surfen im Internet, wie der Computer. Damit auf dem kleinen Display alles gut lesbar muss die Website speziell
         gestaltet werden. Frameworks wie Bootsrap helfen bei diesem Vorhaben, indem mithilfe von vodefinierten CSS-Klassen die Elemente der Website so gestaltet werden, dass diese mit der
-        Bilschirmgröße mitwachsen, sich verschieben oder ausgeblendet werden.\\
-        \\
+        Bilschirmgröße mitwachsen, sich verschieben oder ausgeblendet werden.
+
       \item \textbf{Interne und externe Links}\\
         Bei Links werden sowohl Links, die auf die Website verweisen, als auch Links, die auf andere Seiten zeigen bewertet.
         Zeigen sehr viele externe Links auf eine Seite, interpretiert der Robot diese als geläufig und sie erhält eine höhere Wertung. In unserem Fall war die Kombination mit anderen sozialen
-        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen automatisch Links auf unseren Blog generiert werden.\\
-        \\
+        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen automatisch Links auf unseren Blog generiert werden.
+
         Links, die von der eigenen Seite auf andere verweisen stellen jedoch einen Nachteil dar, da der Robot dem Link folgen könnte, statt die eigene Seite weiter zu inspizieren. Möchte man dies
-        verhindern, kann dem <a> Tag das Attribut rel="nofollow" hinzugefügt werden, um dem Robot zu sagen, dass er diesem Link nicht folgen soll.\\
-        \\
+        verhindern, kann dem <a> Tag das Attribut rel="nofollow" hinzugefügt werden, um dem Robot zu sagen, dass er diesem Link nicht folgen soll.
+
       \item \textbf{Sitemap}\\
       	Die Sitemap ist ein Inhaltsverzeichnis der Website, z.B. in Form einer XML Datei. Die Sitemap hilft dem Robot, wenn er erst einmal auf einer Seite gelandet ist, zugehörige Seiten
         zu finden. Dadurch, dass in der Sitemap die zugehörigen Unterseiten einer Seite mittels URL angegeben werden, hat dies den selben Vorteil wie eine große Anzahl externer Links, die auf diese
         Unterseiten verweisen, nämlich dass Google diese schneller findet. Tools wie xml-sitemaps.com bieten an, eine Sitemap für die angegebene URL zu generieren. Hat der Robot die Seite vollständig
         untersucht, muss die Sitemap im Domain Root-Verzeichnis abgelegt werden. Zuletzt kann die URL zu dieser Sitemap bei Google registriert werden, um Google anzuweisen einen Robot über die Seite
-        laufen zu lassen. Nach einigen Tagen sind die Ergebnisse direkt in der Google Suche sichtbar.\\
-        \\
+        laufen zu lassen. Nach einigen Tagen sind die Ergebnisse direkt in der Google Suche sichtbar.
+
       \item \textbf{Browserkompatibilität}\\
         Nicht jeder Browser stellt jede Seite gleich dar. Die Tags werden unterschiedlich, oder sogar garnicht verstanden. Wird dies nicht beachtet, wirkt sich das auf die Nutzerfreundlichkeit,
         und damit auch auf die Bewertung der Website aus. Um dies zu verhindern gibt es Tools wie zum Beispiel caniuse.com in denen genau verzeichnet ist, welcher Tag, oder welche CSS-Eigenschaft
-        von welchem Browser, beziehungsweise welcher Browserversion unterstützt wird.\\
-        \\
+        von welchem Browser, beziehungsweise welcher Browserversion unterstützt wird.
+
       \item \textbf{Ladezeit}\\
         Der Robot bewertet ebenfalls die Ladezeit einer Website. Sie ergibt sich aus der Anzahl an Bildern, Videos oder eingebundenen Bibliotheken oder Schriftarten auf der Website.
         Speziell im Blog, war früh klar, dass viele Bilder geladen werden müssen. Den Upload auf eine niedrige Dateigröße einzuschränken hat zu Beginn nicht ausgereicht.
         Eine Javascript Bibliothek names yoxview hat es allerdings ermöglicht, die Bilder erst dann zu laden, wenn ein Nutzer auf einen Thumbnail klickt. Die Größe der Thumbnails betrugen bloß
-        ein paar Kilobyte, wodurch die Ladezeit der Website bedeutend eingeschränkt werden konnte.\\
-        \\
+        ein paar Kilobyte, wodurch die Ladezeit der Website bedeutend eingeschränkt werden konnte.
+
       \item \textbf{Barrierefreiheit}\\
         Es gibt verschiedene Möglichkeiten eine Website so zu optimieren, dass auch körperlich eingeschränkte Nutzer sie selbstständig verwenden können.
     \end{itemize}
