--- a/Digitale_Speisekarte.tex
+++ b/Digitale_Speisekarte.tex
@@ -70,13 +70,13 @@
     \subsubsection{Seitenabrufbarkeit}
 
 	Um Seiten anzulegen, welche später im Browser angezeigt werden konnten, musste man im Controller folgende Schritte erledigen. Zuerst empfahl es sich Action Funktionen anzulegen. Diese wurden passend zu der jeweiligen Seite beziehungsweise zu den dementsprechenden Funktionalitäten benannt, welche im Anschluss angezeigt und ausgeführt wurden. Wenn auf der auszugebenden Seite mit einer Template Engine gearbeitet wurde, wurde als Rückgabewert der Methode der anschließende Code definiert:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
 	$this->render(‚DATEIBEZEICHNUNG.html.twig')
   	\end{lstlisting}
 	Die Funktion render() formt den Inhalt des Templates in einen Ausgabewert um, damit die Seite  ausgegeben werden kann.
 	Um die Route der Seiten selbst bestimmen zu können, wurde über der Action-Funktion eine Annotation hinzugefügt. Diese wurde folgendermaßen angegeben:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
 	/**
 	* @Route("/ROUTE, name=„ROUTENBEZEICHNUNG“)
@@ -89,13 +89,13 @@
 
 	Für die Generierung der Datenbank wurde die Variante „Code First“ verwendet, da diese die Möglichkeit bietet, im Nachhinein ohne großen Aufwand die Datenbank zu ändern.
 	Um die Datenbankeinträge zu erstellen, wurde zu Beginn eine PHP-Datei erstellt in welcher die Tabellen als Klassen und die Tabellenzeilen als Objekte angelegt wurden. Die Variablen wurden allesamt mit dem Zugriffsmodifikator „protected“ deklariert, damit nur Klassen, welche von dieser PHP-Datei erben, auf sie zugreifen können. Anschließend wurde oben in der Datei ein USE-Statement eingefügt, welches definiert, dass die Abkürzung „ORM“ in darauf folgender Verwendung besagt, dass es sich um die Generierung eines objektrelationalen Abbilds handelt.
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
 	use Doctrine\ORM\Mapping as ORM;
   	\end{lstlisting}
 	Statt dem Kürzel „ORM“ hätte auch ein beliebiges anderes Wort eingesetzt werden können, auf welches später zugegriffen werden könnte, allerdings ist diese Bezeichnung sehr zu empfehlen, da sie etwaige Verwirrungen vermeidet.
 	Um die Klassen später als Tabellen generieren lassen zu können, wurden Annotationen mit folgendem Schema darüber geschrieben:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
 	/**
  	* @ORM\Entity
@@ -108,7 +108,7 @@
     \end{lstlisting}
 	Damit die relationale Datenbank Objekte den richtigen Datentypen zuordnen konnte, wurden diese ebenfalls mit einer Anmerkung versehen. Da es bei Objekten zu unterscheiden gilt ob es sich um einen Primärschlüssel oder Fremdschlüssel handelt als auch ob es ein Texteintrag, Ganzzahleneintrag, Eintrag mit Kommastellen, Booleaneintrag oder gar ein Zeitstempel ist, gibt es hierbei verschiedene Varianten.
 	Um eine ID als Primare Key zu definieren wurde folgende Annotation verwendet:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	/**
      * @ORM\Column(type="integer")
@@ -119,14 +119,14 @@
 	Die erste Zeile legt den Datentyp als Ganzzahl fest und die zweite Zeile sagt aus, dass es sich um den Primärschlüssel handelt. Mit der letzten Zeile wird dafür gesorgt, dass der Wert automatisch generiert wird, sobald eine neue Tabellenzeile erstellt wird.
 	Bei einem Eintrag mit Kommazahlen musste der Spaltentyp einfach nur auf „float“ eingestellt werden. Für einen Booleaneintrag wurde zwar als Anmerkung der Typ „boolean“ definiert, jedoch ändert das Datenbanksystem MySQL diese Annotation automatisch in das Datenformat „tinyint“.
 	Um einen Texteintrag zu definieren musste sowohl der Datentyp als auch die Länge definiert werden:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	/**
      * @ORM\Column(type="string", length=ANZAHL_DER_ZEICHEN)
      */
   	\end{lstlisting}
 	Damit man einen Zeitstempel erstellen kann, was vor allem für die Bestellungen und die Dokumentation des Datenaustausches mit dem Hexacopter wichtig war, musste die folgende Anmerkung hinzugefügt werden:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	public function __construct()
     /** @ORM\Column(type="datetime", nullable=false ) */
@@ -134,7 +134,7 @@
   	\end{lstlisting}
 	Mithilfe von „nullable=false“ wurde festgelegt, dass der Zeitstempel niemals ein null-Wert sein darf.
 	Um das Datum generieren zu können, musste eine Konstruktorfunktion dafür geschrieben werden:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	public function __construct()
     {
@@ -144,7 +144,7 @@
   	\end{lstlisting}
 	Damit eine ManyToOne beziehungsweise eine OneToMany Verbindung erstellt werden konnte, musste dies ebenfalls mithilfe von Anmerkungen festgelegt werden.
 	Auf der ManyToOne Seite sieht die Annotation dafür folgendermaßen aus:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	/**
      * @ORM\ManyToOne(targetEntity=„NAME_DER_ZIELTABELLE“, inversedBy=„NAME_DER_AKTUELLEN_TABELLE“)
@@ -153,14 +153,14 @@
   	\end{lstlisting}
 	In der oberen Zeile musste angegeben werden, zwischen welchen Tabellen die Verbindung geschaffen werden soll. Als Zieleintrag gibt man hierbei die Bezeichnung der Tabelle auf der Seite der OneToMany Verbindung an und als Kehrwerteintrag den Namen der Tabelle, welche der anderen Seite viele Einträge zur Verfügung stellt.
 	Um die andere Seite der Verbindung zu generieren, wurde folgende Anmerkung verwendet:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	/**
      * @ORM\OneToMany(targetEntity="NAME_DER_ZIELTABELLE", mappedBy="NAME_DER_AKTUELLEN_TABELLE")
      **/
   	\end{lstlisting}
 	Hierbei mussten nur die Namen der Tabellen angegeben werden, welche miteinander verbunden werden sollen. Damit die vielen Einträge, welche von der anderen Tabelle auf die aktuelle verweisen, musste dafür eine ArrayCollection konstruiert werden:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	public function __construct() {
         $this->speiseeintraege = new ArrayCollection();
@@ -168,7 +168,7 @@
   	\end{lstlisting}
 	Damit im Anschluss im Controller auf die Daten zugegriffen werden konnte, musste zu jedem Objekt eine Getter- und eine Setter- Methode erstellt werden. Diese konnte man sich ganz einfach mit einem Rechtsklick über die Menüpunkte „Generate…“ und „Getters and Setters…“ automatisch erstellen lassen.
 	Damit der Code aus dieser PHP-Datei in der MySQL Datenbank der LAMP Distribution verwendet werden konnte, musste zuerst eine Datenbank über das PHPMyAdmin-Interface erstellt werden. Darauf folgend musste in der „config.yml“-Datei, welche automatisch in der Symfony Dateistruktur vorliegt, folgendes festgelegt sein:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	imports:
     - { resource: parameters.yml }
@@ -189,7 +189,7 @@
       	  	auto_mapping: true
   	\end{lstlisting}
 	Alle Werte welche mit Anführungszeichen und Prozentzeichen versehen wurden, mussten in der „parameter.yml“-Datei mit Werten deklariert werden:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	parameters:
     	database_host: IP-ADRESSE
@@ -219,14 +219,14 @@
     \subsubsection{Datenzugriff}
 
 	Damit im Controller auf die Einträge der Datenbank zugegriffen werden konnte, musste ein Repository erstellt werden:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	$repository = $this->getDoctrine()
             ->getRepository(‚AppBundle:TABELLENNAME');
   	\end{lstlisting}
 	Mithilfe der Befehle „findAll()“, „findAllByTABELLENSPALTE(WERT“ und „findOneByTABELLENSPALTE(WERT)“ konnten die benötigten Werte aufgerufen werden.
 	Diese Werte konnten anschließend, einfach in der render-funktion, welche die auszugebende Seite generiert, in einem Array mitgegeben werden, damit sie im Nachhinein im Frontend angezeigt werden konnten:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	return $this->render('DATEIBEZEICHNUNG.html.twig'
             , array(
@@ -235,7 +235,7 @@
         );
   	\end{lstlisting}
 	Um Operationen in der Datenbank vorzunehmen, wurde folgendermaßen vorgegangen:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	$em = $this->getDoctrine()->getManager();
 	$em->remove($DATENBANKEINTRAG);
@@ -250,7 +250,7 @@
     \subsubsection{Formulargenerierung}
 
 	Um zu gewährleisten, dass der Controller die Interaktion eines Benutzers mit dem Formular wahrnimmt, musste dieses darin generiert werden. Mithilfe folgender Codezeilen konnte man die Erstellung des Formulars realisieren:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	$FORMULAR_BEZEICHNUNG = $this->createFormBuilder($REPOSITORY)
             ->add(‚FORMULARFELD_BEZEICHNUNG', 'DATENTYP')
@@ -259,13 +259,13 @@
   	\end{lstlisting}
 	Dank der Funktion „createFormBuilder()“, ist es möglich das Formular in wenigen Schritten zu erstellen. Als Parameter wurde dieser Funktion ein Repository der Datenbanktabelle, welche mithilfe des Formulars verwaltet werden sollte, übergeben. Mit der „add()“ Funktion wurden die einzelnen Formularelemente generiert. Hierbei musste angegeben werden ob es sich bei dem Formularfeld um ein Textfeld, Dropdown-Menü oder ein Passwort handelt. Die Funktion „getForm()“ übergibt das Formular der Variable „FORMULAR\_BEZEICHNUNG“.
 	Mittels der Funktion „handleRequest()“ konnte die Eingabe des Formulars behandelt werden. Um zu überprüfen, ob ein Formular korrekt behandelt und abgeschickt wurde, kann man in einer IF-Abfrage die Boolean Funktionen „isSubmitted()“ und „isValid()“ verwenden:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	if ($form_anmeldebutton_admin->isSubmitted() && $form_anmeldebutton_admin->isValid()) {…}
   	\end{lstlisting}
 	Darin wurden die Inhalte des Formulars der jeweiligen Funktion entsprechend behandelt.
 	Damit das Formular im Frontend angezeigt werden konnte, wurde das Formular in der „render“-Funktion des Return-Statements im Array mitgeliefert:
-	\lstset{language = html}
+	\lstset{language = php}
   	\begin{lstlisting}
   	return $this->render(‚DATEIBEZEICHNUNG.html.twig'
             , array(
